stretch goals - added a fixed navigation with opacity, as well as animations on hover for images on the page.

--- a/css/index.css
+++ b/css/index.css
@@ -175,6 +175,9 @@ nav {
   align-items: center;
   background-color: #F6F6F6;
   border: 1px double #F1F1F1;
+  position: sticky;
+  top: 0;
+  opacity: 0.9;
 }
 nav div {
   margin: 1rem;
@@ -219,6 +222,19 @@ footer {
 @media (max-width: 500px) {
   .home .space-images img {
     width: 100%;
+  }
+}
+.home .space-images img:hover {
+  border: 0.5rem solid transparent;
+  animation-name: img-animation;
+  animation-duration: 2s;
+}
+@keyframes img-animation {
+  from {
+    border-color: #81848E;
+  }
+  to {
+    border-color: #22283A;
   }
 }
 @media (max-width: 500px) {
@@ -277,6 +293,7 @@ footer {
   padding: 0.7rem 1.5rem 0.7rem 1.5rem;
   border-radius: 0.5rem;
   width: 30%;
+  border: 0.15rem solid #22283A;
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn:hover {
@@ -297,6 +314,19 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+.home .walk .walk-img img:hover {
+  border: 0.5rem solid transparent;
+  animation-name: img-animation;
+  animation-duration: 2s;
+}
+@keyframes img-animation {
+  from {
+    border-color: #81848E;
+  }
+  to {
+    border-color: #22283A;
+  }
 }
 @media (max-width: 500px) {
   .home .walk .walk-img {
