--- a/less/navigation.less
+++ b/less/navigation.less
@@ -16,4 +16,9 @@ nav {
             color: @main-font-color;
         }
     }
+
+    position: sticky;
+    top: 0;
+    opacity: .9;
+
 }
